--- a/src/packageoptions.tex
+++ b/src/packageoptions.tex
@@ -77,8 +77,9 @@ switches/.cd,
 %:}
 %:\keyDef{figure root directory}{dir}{\meta{exercise directory}}{
 %:Exercisebank automatically allows you to \input{} and \includegraphics{} from
-%:the same folder and parent folder that your exercise is in. However,
-%:you might want to put the figures inside a different directory.
+%:the same folder folder that your exercise is in, as well as a folder with the
+%:same name as the exercise file. This is elaborated in the intro section.
+%:However, you might want to put the figures inside a different directory.
 %:For example if you have one directory containing your problems called \!texttt{exercises/},
 %:set with \refKey{exercise directory}, and a file containing the exercise:
 %: \!texttt{exercises/faradaysLaw/ACGenerate.tex}.
