Fixed small bug in pathcontrol

--- a/src/pathcontrol.tex
+++ b/src/pathcontrol.tex
@@ -18,6 +18,7 @@
   \xdef\fileInputPath{\figuresPath\filename@area}
   \xdef\fileInputBase{\figuresPath\filename@area\filename@base/}
   \graphicspath{{\fileInputBase}{\fileInputPath}}
-  \@ifundefined{input@path}{\xdef\input@path{{\fileInputBase}{\fileInputPath}}}{}
+  \@dlog{\fileInputBase}
+  \@ifundefined{input@path}{\gdef\input@path{{\fileInputBase}{\fileInputPath}}}{}
   \makeatother
 }
